--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -51,8 +51,7 @@
   margin: 0; }
 
 html {
-  scroll-behavior: smooth;
-  box-sizing: border-box; }
+  scroll-behavior: smooth; }
 
 body {
   font-family: var(--body-font);
@@ -87,3 +86,157 @@ button {
   border: none;
   outline: none;
   cursor: pointer; }
+
+/*=============== REUSABLE CSS CLASSES ===============*/
+.container {
+  max-width: 1200px;
+  width: 100%;
+  margin: 0 auto;
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+  z-index: 2; }
+
+.grid {
+  display: grid;
+  gap: 1.5rem; }
+
+.section {
+  padding: 4.5rem 0 2rem; }
+
+.section__title {
+  position: relative;
+  font-size: var(--h1-font-size);
+  padding-left: 1.25rem;
+  margin-bottom: 2.5rem; }
+
+.section__title::before {
+  content: '';
+  position: absolute;
+  top: 8px;
+  left: 0;
+  width: 3px;
+  height: 20px;
+  background-color: var(--first-color); }
+
+/*=============== HEADER & NAV ===============*/
+.header {
+  background: transparent;
+  width: 100%;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: var(--z-fixed); }
+
+.nav {
+  height: 3.5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .nav__logo {
+    font-weight: 700;
+    display: flex;
+    align-items: center;
+    column-gap: 0.5rem; }
+    .nav__logo-img {
+      width: 0.75rem; }
+  .nav__toggle {
+    display: inline-flex;
+    font-size: 1.15rem;
+    cursor: pointer; }
+
+@media screen and (min-width: 767px) {
+  .nav__menu {
+    background-color: var(--black-color);
+    position: fixed;
+    top: 0;
+    right: -100%;
+    width: 100%;
+    height: 100%;
+    transition: 0.3s; } }
+
+.nav__logo,
+.nav__toggle {
+  color: #fafafa; }
+
+.nav__list {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  row-gap: 3rem;
+  padding-top: 9rem; }
+
+.nav__link {
+  text-transform: uppercase;
+  color: var(--text-color-light);
+  font-size: 1.12rem; }
+  .nav__link:hover {
+    color: #fff; }
+
+.nav__close {
+  color: #fafafa;
+  font-size: 2rem;
+  position: absolute;
+  top: 1rem;
+  right: 1rem;
+  cursor: pointer; }
+
+.show-menu {
+  right: 0; }
+
+/*=============== HOME ===============*/
+.home {
+  gap: 0; }
+  .home__container {
+    padding: 7rem 0 2.5rem;
+    background: linear-gradient(160deg, #3a3e40 -4%, #1b1f22 46%); }
+  .home__content {
+    position: relative; }
+  .home__title {
+    font-size: var(--biggest-font-size);
+    margin-bottom: 1.5rem; }
+    .home__title span {
+      color: var(--primary); }
+  .home__description {
+    margin-bottom: 2rem; }
+  .home__data {
+    border-top: 1px solid var(--text-color);
+    padding-top: 2rem;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1.5rem; }
+    .home__data-number {
+      color: var(--primary);
+      font-size: var(--h1-font-size);
+      margin-bottom: 1.5rem; }
+    .home__data-title {
+      font-size: var(--h3-font-size);
+      margin-bottom: 0.5rem; }
+  .home__scroll {
+    width: 100px;
+    position: absolute;
+    bottom: -7rem;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    animation: scroll 3s infinite; }
+
+.home__title,
+.home__data-title {
+  color: #fafafa; }
+
+.scroll-header {
+  background-color: var(--body-color);
+  box-shadow: 0 1px 4px rgba(40, 37, 37, 0.1); }
+  .scroll-header .nav__logo,
+  .scroll-header .nav__toggle {
+    color: var(--text-color); }
+  .scroll-header .nav__logo-img {
+    mix-blend-mode: difference; }
+
+@keyframes scroll {
+  0% {
+    transform: translateY(0%); }
+  50% {
+    transform: translateY(-0.5rem); }
+  100% {
+    transform: translateY(0%); } }
