--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -96,5 +96,5 @@ button {
   left: 0;
   width: 3px;
   height: 20px;
-  background-color: var(--first-color);
+  background-color: var(--primary);
 }
