--- a/styles/sass/_base.scss
+++ b/styles/sass/_base.scss
@@ -19,7 +19,8 @@ html {
 }
 
 body {
-  font-family: var(--body-font);
+  // font-family: var(--body-font);
+  font-family: Satoshi;
   font-size: var(--normal-font-size);
   background-color: var(--body-color);
   color: var(--text-color);
