--- a/styles/css/style.css
+++ b/styles/css/style.css
@@ -403,3 +403,22 @@ button {
     transition: 0.4s; }
   .quality_button:hover i {
     transform: translateX(0.25rem); }
+
+/*=============== LOGOS ===============*/
+.logo {
+  background-color: #fff; }
+  .logo__container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    justify-items: center;
+    align-items: center;
+    gap: 2.5rem;
+    border-top: 1px solid var(--text-color-light);
+    padding-top: 2.5rem; }
+  .logo__img {
+    width: 80px;
+    mix-blend-mode: luminosity;
+    opacity: 0.4;
+    transition: 0.4s; }
+    .logo__img:hover {
+      opacity: 0.8; }
