--- a/styles/sass/index.scss
+++ b/styles/sass/index.scss
@@ -3,6 +3,9 @@
 
 // COMPONENTS
 @import './components/nav';
+@import './components/footer';
+@import './components/scroll';
+@import './components/breakpoints';
 
 // PAGES
 @import './pages/home';
