--- a/styles/sass/components/_nav.scss
+++ b/styles/sass/components/_nav.scss
@@ -32,6 +32,20 @@
   }
 }
 
+.scroll-header {
+  background-color: var(--body-color);
+  box-shadow: 0 1px 4px hsla(0, 4%, 15%, 0.1);
+
+  .nav__logo,
+  .nav__toggle {
+    color: var(--text-color);
+  }
+
+  .nav__logo-img {
+    mix-blend-mode: difference;
+  }
+}
+
 @media screen and (min-width: 767px) {
   .nav__menu {
     background-color: var(--black-color);
@@ -78,4 +92,9 @@
 
 .show-menu {
   right: 0;
+}
+
+// ACTIVE LINK
+.active-link {
+  color: #fafafa;
 }
